--- a/.env.dist
+++ b/.env.dist
@@ -14,8 +14,8 @@ HTTP_RETRY=3
 
 SOLR_CLOUD=false
 SOLR_HOST=http://127.0.0.1:8983/solr
-SOLR_USERNAME=solr
-SOLR_PASSWORD=SolrRocks
+SOLR_USERNAME=
+SOLR_PASSWORD=
 
 SOLR_COLLECTION_DATASET=donl_dataset
 SOLR_COLLECTION_SEARCH=donl_search
