--- a/solr_tasks/resources/mappings.json
+++ b/solr_tasks/resources/mappings.json
@@ -67,6 +67,9 @@
   "access_rights": [
     "access_rights"
   ],
+  "access_rights_argument": [
+    "url"
+  ],
   "dataset_status": [
     "status"
   ],
