Update from gitlab

--- a/solr_tasks/resources/mappings.json
+++ b/solr_tasks/resources/mappings.json
@@ -14,7 +14,7 @@
   "metadata_created": [
     "sys_created"
   ],
-  "metadata_modified": [
+  "last_modified": [
     "sys_modified"
   ],
   "identifier": [
