Undo mapping update
 Undo mapping update as new CKAN version hasn't been deployed yet.

--- a/solr_tasks/resources/mappings.json
+++ b/solr_tasks/resources/mappings.json
@@ -14,7 +14,7 @@
   "metadata_created": [
     "sys_created"
   ],
-  "last_modified": [
+  "metadata_modified": [
     "sys_modified"
   ],
   "identifier": [
